素材追加更新

--- a/android/SaveTheBird/app/src/main/res/values/strings.xml
+++ b/android/SaveTheBird/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="title">SaveTheBird</string>
+    <string name="siteurl">https://www.google.co.jp</string>
 </resources>
