--- a/android/SaveTheBird/app/src/main/res/values/strings.xml
+++ b/android/SaveTheBird/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="title">SaveTheBird</string>
     <string name="siteurl">https://www.google.co.jp</string>
+    <string name="systemFont">logotypejp_mp_m_1.1.ttf</string>
+
 </resources>
