設定画面ロジック作成

--- a/android/SaveTheBird/app/src/main/res/values/strings.xml
+++ b/android/SaveTheBird/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="title">SaveTheBird</string>
     <string name="siteurl">https://www.google.co.jp</string>
     <string name="systemFont">logotypejp_mp_m_1.1.ttf</string>
+    <string name="optionPageTitle">オプション</string>
 
 </resources>
